Added tandoori link to index.html. Built tandoori.html

--- a/recipes/tandoori.html
+++ b/recipes/tandoori.html
@@ -9,7 +9,6 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/tandoori.html">Tandoori</a>
+        <h1>Tandoori</h1>
     </body>
 </html>
